Version 0.24.3 (2022-01-18)
- Fix sysvar unique_id
- slugify sysvar name

Version 0.24.0-0.24.2 (2022-01-17)
- Improve exception handling

Version 0.23.3 (2022-01-16)
- Update fix_rssi according to doc

Version 0.23.1 (2022-01-16)
- Add more logging to reconnect
- Add doc link for RSSI fix

Version 0.23.0 (2022-01-16)
- Make ["DRY", "RAIN"] sensor a binary_sensor
- Add converter to sensor value
    - HmIP-SCTH230 CONCENTRATION to int
    - Fix RSSI
- raise connection_checker interval to 60s
- Add sleep interval(120s) to wait with reconnect after successful connection check

Version 0.22.2 (2022-01-15)
- Rename hub extra_state_attributes to attributes

Version 0.22.1 (2022-01-15)
- Add VALVE_STATE for hm climate
- Add entity_type to attributes
- Accept LOWBAT only on channel 0

Version 0.22.0 (2022-01-14)
- Move client management to central
- Add rooms
- Move calls to create_devices and start_connection_checker

Version 0.21.2 (2022-01-13)
- Add ERROR_LOCK form HmIP-DLD
- Remove ALARM_EVENTS

Version 0.21.1 (2022-01-13)
- Fix event identification and generation

Version 0.21.0 (2022-01-13)
- Remove typecast for text, binary_sensor and number
- Don't exclude Servicemeldungen from sysvars
- Use Servicemeldungen sysvar for hub state
- Add test for HM-CC-VG-1 (HM-Heatinggroup)
- Remove additional typecasts for number

Version 0.20.0 (2022-01-12)
- Add converter to BaseParameterEntity/GenericEntity
- Fix number entities returning None when 0

Version 0.19.0 (2022-01-11)
- Mark secondary channels name with a V --> Vch

Version 0.18.1 (2022-01-10)
- Reduce some log_level
- Fix callback to notify un_reach

Version 0.18.0 (2022-01-09)
- Add config option to specify storage directory
- Move Exceptions to own module
- Add binary_sensor platform for SVs
- Add config check
- Add hub_entities_by_platform
- Remove option_enable_sensors_for_system_variables

Version 0.17.1 (2022-01-09)
- Fix naming for multi channel custom entities

Version 0.17.0 (2022-01-09)